fixed logo size on mobile

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -17,6 +17,10 @@
     margin-bottom: 15px;
   }
 
+  #header-logo{
+    max-width: 90%;
+  }
+
 #top-of-the-world{
   z-index: 101;
 }
